# home-vision

./: .gitignore  home-visionctl  main.py  make_timelapse.py  pom.xml  pyproject.toml  start.sh  todo.txt
app/: config.py  file_manager.py  stream_processor.py
conf/: config.json  default.json
config/: config.json
context/: initial_implementation_plan.md  prompt_change_tmp_file.txt  todo.txt
old-java-src/main/java/org/homevision/: Application.java
old-java-src/main/java/org/homevision/controller/: WebConfig.java
old-java-src/main/java/org/homevision/service/: Config.java
python-rtsp-service/: .gitignore  README.md  camera_processor.py  config.json.example  config.py  requirements.txt  rtsp-video.service  start.sh  video_service.py
src/main/java/org/homevision/: Application.java  CameraTest.java  Main.java
src/main/java/org/homevision/controller/: CommandController.java  MainController.java  WebConfig.java
src/main/java/org/homevision/service/: CaptureService.java  Config.java  VideoIOProcessor.java  VideoProcessor.java  VideoService.java
src/main/resources/: application.properties
src/main/resources/conf/: config.json
src/main/resources/public/: index.html  main.js
src/main/resources/static/: index.html
web/: index.html  main.css  main.js
