[project]
name = "home-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "av>=16.0.1",
    "numpy>=2.0.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.9.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "concurrent-collections>=2.1.0",
]
[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.0",
]
